<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BakingApp</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="title_step_activity">Recipe Step</string>
    <string name="string_next">Next</string>
    <string name="string_previous">Previous</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="ingredients_list" translatable="false">
    <xliff:g id="bullet">\u2022</xliff:g>
    <xliff:g id="name">%s</xliff:g>
    (<xliff:g id="quantity">%s</xliff:g>
    <xliff:g id="unit">%s</xliff:g>)
    </string>
    <string name="ingred_header">Recipe Ingredients</string>
    <string name="ingreds_file_key">file_prefs</string>
    <string name="ingreds_recipe_key">recipe_prefs</string>
    <string name="ingreds_key">ingreds_prefs</string>
    <string name="def_string">No ingredients saved</string>
    <string name="saved_step_id">Saved instance state</string>
    <string name="saved_playback_pos">Saved instance state playback position</string>
    <string name="video_step">Video Step</string>
    <string name="release_playback_pos">Current playback position is</string>
    <string name="onSave_playback_pos">Saved playback position</string>
    <string name="exo_playing">ExoPlayer is playing.</string>
    <string name="exo_paused">ExoPlayer is paused.</string>
    <string name="load_finished_recipes">Successful LoadFinished for List of Recipes.</string>
    <string name="load_finished_steps">Successful LoadFinished for List of Steps per Recipe.</string>
    <string name="ingredients">Recipe Ingredients:</string>
    <string name="recipes_saved_shared">Recipe saved in SharedPreferences.</string>
    <string name="ingreds_widget">IngredientsList added to widget.</string>
    <string name="nutella_text">Nutella Pie</string>
    <string name="playback_state">playback state</string>
</resources>
